@@ -1,4 +1,3 @@
-DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
-EBUILD selinux-ipsec-tools-2.20110726.ebuild 253 RMD160 2f32919bde53b3c4e931227d79f7c16aebe32e3c SHA1 d8b46f4fcc09ba9dd90605e7fcdb09f200e2025a SHA256 90229a7b454ee685c71d96aa5c338b098878fe359c4ab5f4ef48a60ac8234d11
-MISC ChangeLog 4336 RMD160 dffab2cc5278d62f8f7bac94a2fa7bfb064ccf3c SHA1 bec33e130ff409a0dfa488fface655a34323efc2 SHA256 2aee6cedb4114dade36996b3e680a54aa0dc406f05dbb268fb52801bb07dbc75
+EBUILD selinux-ipsec-tools-2.20110726.ebuild 358 RMD160 09a4ed9f7d0e1fdbf5a9553728fc33f2258685f0 SHA1 931be0ded479e82515563bda8536ab6cd2811c30 SHA256 517ac4ef2bbac8744a25e962d6b7a8e51962641111630f7aab2b321cb0192e5e
+MISC ChangeLog 4436 RMD160 bbbcaaf43cebed6a9f1c942521cca2de0f3c7851 SHA1 8399169ee8c315c9b032f636b44e4637cb44905d SHA256 835855fbd4d3e118fe149703fc5572afc56a5711c1de4929561fb13e39e3c846
 MISC metadata.xml 235 RMD160 4bc6b5a9936928240ba551d41f565c2d97b4ac71 SHA1 92c47e5e45dcb2657f804457cb4b3070a0a4c416 SHA256 d95ed6b866d2103eb6fb3e71e11a799222e14ccd61f588f720ac405ebbca31ef
