@@ -1,0 +1,10 @@
+# ChangeLog for sec-policy/selinux-ipsec
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*selinux-ipsec-2.20110726 (13 Aug 2011)
+
+  13 Aug 2011; <swift@gentoo.org> +selinux-ipsec-2.20110726.ebuild,
+  +metadata.xml:
+  Initial ebuild for SELinux' ipsec module
+
